MAJ 05/09 update DOV OK et list of events OK

--- a/src/main/webapp/VIEW/addAe.xhtml
+++ b/src/main/webapp/VIEW/addAe.xhtml
@@ -327,13 +327,14 @@
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-success"
+                                         disabled="#{aeBean.buttonSuccess}"
                                          action="#{aeBean.submitFormAddAe}"/>
 
                         <p:commandButton value="#{I18N['connectionpage.return.button']}"
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-secondary"
-                                         action="#{eventBean.deleteEvent()}"/>
+                                         action="#{aeBean.cancelForm()}"/>
                     </span>
                 </h:form>
             </div>
