--- a/src/main/webapp/VIEW/addDm.xhtml
+++ b/src/main/webapp/VIEW/addDm.xhtml
@@ -88,7 +88,7 @@
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-secondary"
-                                         action="#{eventBean.deleteEvent()}"/>
+                                         action="#{dmBean.cancelForm()}"/>
                     </span>
                 </h:form>
             </div>
