--- a/src/main/webapp/VIEW/addTe.xhtml
+++ b/src/main/webapp/VIEW/addTe.xhtml
@@ -175,7 +175,12 @@
                                          class="ui-button-success"
                                          action="#{teBean.submitFormAddTe}"/>
 
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}"
+                                         ajax="false"
+                                         validateClient="true"
+                                         class="ui-button-secondary"
+                                         disabled="#{teBean.buttonSuccess}"
+                                         action="#{teBean.cancelForm()}"/>
                     </span>
                 </h:form>
             </div>
