--- a/src/main/webapp/VIEW/addVs.xhtml
+++ b/src/main/webapp/VIEW/addVs.xhtml
@@ -446,6 +446,7 @@
                                          ajax="false"
                                          validateClient="true"
                                          class="ui-button-secondary"
+                                         disabled="#{vsBean.buttonSuccess}"
                                          action="#{vsBean.cancelForm()}"/>
                     </span>
                 </h:form>
