--- a/src/main/webapp/VIEW/addSubject.xhtml
+++ b/src/main/webapp/VIEW/addSubject.xhtml
@@ -20,21 +20,6 @@
                 <h:form>
                     <p:outputPanel class="form-control">
                         <span class="field col-12 md:col-4 p-20-0">
-                            <p:outputLabel for="input_subjectNum" value="#{I18N['subjectPage.subjectNum']}"/>
-                            <p:inputText id="input_subjectNum" class="label" value="#{subjectBean.subject.subjectNum}"
-                                         placeholder="#{I18N['subjectPage.subjectNum.placeholder']}"
-                                         validatorMessage="#{I18N['subjectPage.subjectNum.errorMessage']}">
-                                <p:ajax update="messageSubjectNum" event="blur"/>
-                            </p:inputText>
-                        </span>
-                        <p:message id="messageSubjectNum" for="@previous"/>
-                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{subjectBean.messageErrorSubjectNum}">
-                            <div><span class="ui-message-error-icon"> </span>
-                                <span class="ui-message-error-detail"><h:outputText
-                                        value="#{I18N['messageErrorSubjectNum']}"/></span>
-                            </div>
-                        </div>
-                        <span class="field col-12 md:col-4 p-20-0">
                             <p:outputLabel for="inputsiteByIdSite" value="#{I18N['sitePage.siteNum']}"/>
                             <p:selectOneMenu id="inputsiteByIdSite"
                                              value="#{subjectBean.subject.siteByIdSite}"
@@ -72,8 +57,8 @@
                                          validateClient="true"
                                          class="ui-button-success"
                                          action="#{subjectBean.submitFormAddSubject()}"/>
-
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{subjectBean.cancelForm()}"
+                                         class="ui-button-secondary" id="cancelButton"/>
                     </span>
                 </h:form>
             </div>
