--- a/src/main/webapp/VIEW/updateRole.xhtml
+++ b/src/main/webapp/VIEW/updateRole.xhtml
@@ -41,7 +41,8 @@
                                          validateClient="true"
                                          class="ui-button-success"
                                          action="#{roleBean.submitFormUpdateRole}"/>
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{roleBean.cancelForm()}"
+                                         class="ui-button-secondary" id="cancelButton"/>
                     </span>
                 </h:form>
             </div>
