--- a/src/main/webapp/VIEW/updateSite.xhtml
+++ b/src/main/webapp/VIEW/updateSite.xhtml
@@ -65,7 +65,9 @@
                                          validateClient="true"
                                          class="ui-button-success"
                                          action="#{siteBean.submitFormUpdateSite}"/>
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{siteBean.cancelForm()}"
+                                         class="ui-button-secondary" id="cancelButton"/>
+
                     </span>
                 </h:form>
             </div>
