--- a/src/main/webapp/VIEW/updateSubject.xhtml
+++ b/src/main/webapp/VIEW/updateSubject.xhtml
@@ -77,7 +77,8 @@
                                          validateClient="true"
                                          class="ui-button-success"
                                          action="#{subjectBean.submitFormUpdateSubject()}"/>
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}" action="#{subjectBean.cancelForm()}"
+                                         class="ui-button-secondary" id="cancelButton"/>
                     </span>
                 </h:form>
             </div>
